--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,18 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-hello world
+// hello world
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hangman</title>
+    <link href="hangman.css" rel="stylesheet">
+    
+</head>
+<body>
+
+    <script type="text/javascript" src="hangman.js"></script>
+
+    <h1>Hangman</h1>
